--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "pixel-pace",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://TheVegeta.github.io/pixel-pace",
   "dependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@react-three/cannon": "6.4.0",
@@ -21,7 +22,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -42,6 +45,7 @@
     ]
   },
   "devDependencies": {
-    "@types/three": "^0.155.1"
+    "@types/three": "^0.155.1",
+    "gh-pages": "^6.0.0"
   }
 }
